Compile to Java 17 instead (#3)